fix spacing for signup and login header

--- a/react-front-end/src/App.css
+++ b/react-front-end/src/App.css
@@ -440,7 +440,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 100px; }
+  padding: 100px;
+  font-family: "Ubuntu", sans-serif; }
+  .signup-wrapper h1 {
+    margin: 20px 0;
+    color: #4a4a4b; }
 
 .form-paper {
   display: flex;
@@ -464,7 +468,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 100px; }
+  padding: 100px;
+  font-family: "Ubuntu", sans-serif; }
+  .login-wrapper h1 {
+    margin: 20px 0;
+    color: #4a4a4b; }
 
 .form-content {
   display: flex;
