--- a/react-front-end/src/sass/signup.scss
+++ b/react-front-end/src/sass/signup.scss
@@ -3,14 +3,20 @@
   flex-direction: column;
   align-items: center;
   padding: 100px;
+  font-family: $main-font;
+
+  h1 {
+    margin: 20px 0;
+    color: $table-font-color
+  }
+
 }
 
 .form-paper {
   display: flex;
   justify-content: center;
   width: 500px;
-  padding: 20px
-
+  padding: 20px;
 }
 
 .form-content {
